# iyes_mesh

./: Cargo.toml  README.md  rustfmt.toml
doc/: ima.md
examples/: simple_encode.rs
src/: checksum.rs  descriptor.rs  header.rs  io.rs  lib.rs  mesh.rs  read.rs  write.rs
